Prevent overlapping of submenu

--- a/src/public/navbar/style.css
+++ b/src/public/navbar/style.css
@@ -117,6 +117,7 @@ nav {
 		text-align: left;
 		background-color: var(--general-background);
 		border: 1px solid var(--general-border);
+		z-index: 1;
 
 		.sub-menu {
 			top: 0;
